[tool.poetry]
name = "repl_python3_Scratchedia-Advanced-Search-Engine"
version = "0.1.0"
description = ""
authors = ["xMysticalCoder <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
